--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,33 @@
 /* All styles for your header Components live here */
+.main-header {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid red;
+}
+
+.logo {
+    width: 60px;
+    height: 60px;
+    margin-top: 10px;
+}
+
+.header-title {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    width: 100%;
+    align-items: space-between;
+    font-size: 1.8rem;
+    margin-left: 10px;
+}
+
+.header-title h1 {
+    font-size: 1.8rem;
+
+}
+
+.header-title span {
+    font-size: 1.6rem;
+    color: gray;
+}
+
