--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -2,7 +2,6 @@
 .main-header {
     display: flex;
     flex-direction: row;
-    border: 1px solid red;
 }
 
 .logo {
@@ -14,16 +13,15 @@
 .header-title {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     width: 100%;
     align-items: space-between;
     font-size: 1.8rem;
-    margin-left: 10px;
+    padding: 0 30px;
 }
 
 .header-title h1 {
     font-size: 1.8rem;
-
+    height: 10px;
 }
 
 .header-title span {
