--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -9,8 +9,10 @@
 }
 
 .red-button {
-    background: red;
+    background: darkred;
     border: 1px solid gray;
+    font-weight: 200;
+    color: white;
 }
 
 .twoButton-text {
@@ -26,6 +28,7 @@
     line-height: 100px;
     font-size: 50px;
     width: 25%;
+    font-weight: 200;
 }
 
 .num-button {
@@ -34,4 +37,5 @@
     font-size: 50px;
     width: 25%;
     background: white;
+    font-weight: 200;
 }
