--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -4,6 +4,7 @@
     text-align: right;
     height: 100px;
     line-height: 100px;
-    font-size: 50px;
+    font-size: 60px;
     padding: 5px;
+    font-weight: 200;
 }
